--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,20 +1,34 @@
-$primary-color: #272727;
-$red: red;
-$font-color: white;
-$font-weights: (
-    'regular':400,
-    'medium':500,
-    'bold':600,
-);
+@import './resets';
+@import './variables';
+
+@function weight($weight-name){
+    @return map-get($font-weights, $weight-name)
+}
+
+@mixin flex-center($direction){
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: $direction;
+}
+
+@mixin theme($light-theme) {
+    @if $light-theme {
+        background: lighten($primary-color, 100%);
+        color: darken($font-color, 100%);
+    }
+}
 
 body{
     background-color: $primary-color;
     color: $font-color;
 
-    font-weight: map-get($font-weights, bold);
+    font-weight: weight(regular);
 }
 
 .main{
+    @include flex-center(row);
+
     width: 80%;
     margin: auto;
 
@@ -25,4 +39,8 @@ body{
             color: pink;
         }
     }
+}
+
+.light{
+    @include theme($light-theme:false);
 }
